--- a/css/main.css
+++ b/css/main.css
@@ -18,26 +18,62 @@
     font-size: 70%; } }
 
 body {
-  margin: 0px 0 0 0;
+  margin: 40px 0 0 0;
   background: #F5F8FA;
   font-family: 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','メイリオ',Meiryo,Osaka,'ＭＳ Ｐゴシック','MS PGothic',sans-serif;
-  color: #404040; }
+  color: #304030; }
+
+.fixed-nav {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height: 40px;
+  z-index: 10000;
+  background: #fff;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
+  text-align: right; }
+  .fixed-nav .fixed-nav-inner {
+    max-width: 960px;
+    height: 100%;
+    margin: 0 auto;
+    box-sizing: border-box;
+    padding: 0 20px; }
+    @media screen and (max-width: 639px) {
+      .fixed-nav .fixed-nav-inner {
+        padding: 0 10px; } }
+  .fixed-nav a {
+    display: inline-block;
+    height: 100%;
+    padding: 0 10px;
+    box-sizing: border-box;
+    text-decoration: none;
+    line-height: 40px;
+    color: #555; }
+    @media screen and (max-width: 639px) {
+      .fixed-nav a {
+        padding: 0 5px;
+        font-size: 120%; } }
+    .fixed-nav a:hover, .fixed-nav a.active {
+      border-bottom: solid 2px #e73262;
+      color: #e73262;
+      font-weight: bolder; }
 
 .container {
   width: 100%;
   margin: 0 auto;
   background: #fff; }
+  .container a.anchor {
+    display: block;
+    visibility: none;
+    position: relative;
+    top: -40px; }
 
 .full-article {
   margin: 0 auto;
-  padding: 30px 5% 40px; }
+  padding: 30px 5%; }
   @media screen and (max-width: 639px) {
     .full-article {
       padding: 15px 5%; } }
-  .full-article ul {
-    max-width: 700px;
-    margin: 0 auto;
-    padding: 0 3px 0 20px; }
   .full-article h2 {
     max-width: 700px;
     margin: 20px auto 30px;
@@ -45,8 +81,6 @@ body {
     @media screen and (max-width: 639px) {
       .full-article h2 {
         margin: 15px auto 20px; } }
-  .full-article h3 {
-    margin-bottom: 5px; }
   .full-article p {
     max-width: 700px;
     margin: 5px auto;
@@ -66,8 +100,8 @@ body {
     max-width: 700px;
     margin: 20px auto;
     padding: 30px 20px 10px;
-    border-top: solid 1px #111;
-    color: #111111; }
+    border-top: solid 1px #003300;
+    color: #114411; }
     @media screen and (max-width: 639px) {
       .full-article .article-headline {
         margin: 20px auto 10px;
@@ -78,21 +112,22 @@ body {
   .full-article.article-dark {
     color: #fff; }
     .full-article.article-dark .article-headline {
-      color: #f0f0f0;
-      border-color: #f0f0f0; }
+      color: #fff0f0;
+      border-color: #fff0f0; }
     .full-article.article-dark a {
-      text-decoration: underline; }
+      text-decoration: underline;
+      color: #fff0f0; }
 
 #title-hero {
   box-sizing: border-box;
-  height: 400px;
-  padding-top: 110px;
+  height: 450px;
   background-image: url(../img/title_background.png);
   background-size: cover;
-  background-position: center; }
+  background-position: center;
+  padding-top: 80px; }
   @media screen and (max-width: 640px) {
     #title-hero {
-      height: 210px; } }
+      height: 300px; } }
   @media screen and (max-width: 640px) {
     #title-hero {
       padding-top: 50px; } }
@@ -121,12 +156,15 @@ body {
       margin: 8px 0; }
 
 #article-intro {
-  background: #f0f0f0; }
+  background-color: #f0f0f0; }
   #article-intro #socialicons {
     margin-top: 20px; }
     #article-intro #socialicons img {
       height: 35px;
       margin: 0 10px; }
+
+#article-access #access-googlemap {
+  text-align: center; }
 
 #article-inquiry {
   height: 600px;
@@ -153,7 +191,40 @@ body {
       width: 300px;
       height: 460px; }
 
-#article-us {
-  background: #013; }
+#article-credit {
+  background: #142b18; }
+  #article-credit h3 {
+    margin-top: 30px;
+    text-align: center;
+    font-size: 140%; }
+  #article-credit #copyright {
+    margin-top: 30px;
+    text-align: center;
+    font-size: 80%; }
+
+.talk-header {
+  margin-bottom: 10px; }
+  .talk-header span.title {
+    font-size: 140%; }
+  .talk-header span.name {
+    font-size: 110%; }
+  .talk-header span.major {
+    font-size: 110%;
+    color: gray; }
+
+.talk-abs {
+  margin-bottom: 30px;
+  margin-left: 20px; }
+
+.time-table {
+  margin-left: 10px; }
+  .time-table td.title {
+    padding-left: 10px; }
+  .time-table td.name {
+    padding-left: 10px; }
 
 /*# sourceMappingURL=main.css.map */
+#article-us {
+  background: #013; 
+  color: #F5F8FA;}
+
