--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,4 @@
-$nav-height: 0px;
+$nav-height: 40px;
 
 /* utility */
 .clearfix:after {
@@ -31,27 +31,77 @@ body {
 
   font-family: 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','メイリオ',Meiryo,Osaka,'ＭＳ Ｐゴシック','MS PGothic',sans-serif;
 
-  color: #404040;
+  color: #304030;
+}
+
+.fixed-nav {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height: $nav-height;
+  z-index: 10000;
+  background: #fff;
+  box-shadow: 0 0 2px 2px rgba(0,0,0,0.1);
+
+  text-align: right;
+
+  .fixed-nav-inner {
+    max-width: 960px;
+    height: 100%;
+    margin: 0 auto;
+    box-sizing: border-box;
+
+    padding: 0 20px;
+    @media screen and (max-width: 639px) {
+      padding: 0 10px;
+    }
+  }
+  a {
+    display: inline-block;
+    height: 100%;
+
+    padding: 0 10px;
+    @media screen and (max-width: 639px) {
+      padding: 0 5px;
+      font-size: 120%;
+    }
+
+    box-sizing: border-box;
+
+    text-decoration: none;
+    line-height: 40px;
+    color: #555;
+
+    &:hover, &.active {
+      border-bottom: solid 2px #e73262;
+      color: #e73262;
+      font-weight: bolder;
+    }
+  }
 }
 
 .container {
   width: 100%;
   margin: 0 auto;
   background: #fff;
+
+  a {
+    &.anchor {
+      display: block;
+      visibility: none;
+      position:relative;
+      top: -$nav-height;
+    }
+  }
 }
 
 .full-article {
   margin: 0 auto;
-  padding: 30px 5% 40px;
+  padding: 30px 5%;
   @media screen and (max-width: 639px) {
     padding: 15px 5%;
   }
 
-  ul {
-    max-width: 700px;
-    margin: 0 auto;
-    padding: 0 3px 0 20px;
-  }
   h2 {
     max-width: 700px;
     margin: 20px auto 30px;
@@ -59,9 +109,6 @@ body {
       margin: 15px auto 20px;
     }
     font-size: 200%;
-  }
-  h3 {
-    margin-bottom: 5px;
   }
   p {
     max-width: 700px;
@@ -91,8 +138,8 @@ body {
       margin: 20px auto 10px;
       padding: 15px 15px;
     }
-    border-top: solid 1px #111;
-    color: #111111;
+    border-top: solid 1px #003300;
+    color: #114411;
     h3 {
       font-size: 140%;
       margin: 0;
@@ -102,26 +149,29 @@ body {
   &.article-dark {
     color: #fff;
     .article-headline {
-      color: #f0f0f0;
-      border-color: #f0f0f0;
+      color: #fff0f0;
+      border-color: #fff0f0;
     }
     a {
       text-decoration: underline;
+      color: #fff0f0;
     }
+
   }
 }
 
+// items with ids
 #title-hero {
   box-sizing: border-box;
-  height: 400px;
-  padding-top: 110px;
+  height: 450px;
   @media screen and (max-width: 640px) {
-    height: 210px;
+    height: 300px;
   }
   background-image: url(../img/title_background.png);
   background-size: cover;
   background-position: center;
 
+  padding-top: 80px;
   @media screen and (max-width: 640px) {
     padding-top: 50px;
   }
@@ -158,7 +208,7 @@ body {
 }
 
 #article-intro {
-  background: #f0f0f0;
+  background-color: #f0f0f0;
   #socialicons {
     margin-top: 20px;
     img {
@@ -168,7 +218,10 @@ body {
   }
 }
 
-#article-past {
+#article-access {
+  #access-googlemap {
+    text-align: center;
+  }
 }
 
 #article-inquiry {
@@ -202,6 +255,50 @@ body {
   }
 }
 
-#article-us {
-  background: #013;
+#article-credit {
+  background: #142b18;
+
+  h3 {
+    margin-top: 30px;
+    text-align: center;
+    font-size: 140%;
+  }
+  #copyright {
+    margin-top: 30px;
+    text-align: center;
+    font-size: 80%;
+  }
+}
+
+.talk-header {
+  margin-bottom: 10px;
+  span.title {
+    font-size: 140%;
+  }
+
+  span.name {
+    font-size: 110%;
+  }
+
+  span.major {
+    font-size: 110%;
+    color: gray;
+  }
+}
+
+.talk-abs {
+  margin-bottom: 30px;
+  margin-left: 20px;
+}
+
+.time-table {
+  margin-left: 10px;
+
+  td.title {
+    padding-left: 10px;
+  }
+
+  td.name {
+    padding-left: 10px;
+  }
 }
