[update] replaced png with jpg

--- a/css/main.css
+++ b/css/main.css
@@ -204,7 +204,7 @@ body {
 #title-hero {
   box-sizing: border-box;
   height: 450px;
-  background-image: url(../img/title_background.png);
+  background-image: url(../img/title_background.jpg);
   background-size: cover;
   background-position: center;
   padding-top: 80px; }
